--- a/src/css/Trips.css
+++ b/src/css/Trips.css
@@ -14,6 +14,40 @@
 }
 
 .trips-title{
-    font-family: 'Montserrat', sans-serif;
+    font-size: 3.5vh;
+}
 
+.font-family-montserrat {
+    font-family: 'Montserrat', sans-serif;
+    color: #444444;
+}
+
+.trips-div-title-margin {
+    margin-top: 3vh;
+}
+
+.tripcard-image{
+    width: 100%;
+    height: 25vh;
+    border-radius: 1vh;
+}
+
+.tripscard-margin-top{
+    margin-top: 3vh;
+    margin-bottom: 4vh;
+}
+
+.tripcard-title{
+    font-size: 2.9vh;
+    margin-top: 0.9vh;
+}
+
+.tripcard-style-p{
+    font-size: 2.1vh;
+    margin-top: 1vh;
+    color: #404040;
+}
+
+.trips-margin-down{
+    margin-top: 14vh
 }
