--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,9 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 
+
 body {
 	font-family: 'Roboto', sans-serif;
 	/* font-family: 'Montserrat', sans-serif; */
+	height: 100vh;
 }
