--- a/src/css/App.css
+++ b/src/css/App.css
@@ -3,16 +3,16 @@
  position: fixed;
  bottom: 0;
  width: 100%;
- height: 11vh;
+ height: 9vh;
  color: black;
- border-top:1px solid grey;
+ box-shadow: 0 0 7px #ddd;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
 }
 .size-5vh {
-  width: 5vh;
+  width: 4vh;
 }
 
 .text-align-center {
@@ -37,4 +37,8 @@
 
 .borderTest {
   border: 1px solid black;
+}
+
+.text-size{
+  font-size: 1.8vh;
 }
