--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -5,6 +5,7 @@
   grid-template-rows: 20% 40% 20% 20%;
   align-items: center;
   justify-items: center;
+  margin-top: 10vh;
 }
 
 .home-logo{
@@ -18,21 +19,6 @@
   height: 300px;
   grid-row: 2 / 3;
 }
-
-.home-btn-signup{
-  background-color: #657FAC;
-  text-decoration:none; 
-  border-radius: 10vh;
-  text-align: center;
-  padding-top: 1.7vh;
-  width: 45vh;
-  height: 7vh;
-  font-size: 1.5em;
-  color: #fff;
-  grid-row: 3 / 4;
-  box-shadow: 1px 5px 25px rgba(0, 0, 0, 0.1);
-}
-
 .home-btn-login {
   background-color: #e57067;
   text-decoration:none; 
@@ -44,6 +30,18 @@
   height: 7vh;
   font-size: 1.5em;
   color: #fff;
-  grid-row: 4 / 5;
+  grid-row: 3 / 4;
   box-shadow: 1px 5px 25px rgba(0, 0, 0, 0.1);
 }
+.home-btn-signup{
+  text-decoration:none; 
+  text-align: center;
+  padding-top: 1.7vh;
+  width: 45vh;
+  height: 7vh;
+  font-size: 1.5em;
+  color: #fff;
+  grid-row: 4 / 5;
+}
+
+
