--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,47 +1,54 @@
-.home-container {
-  width: 100%;
-  height: 100vh;
-  display: grid;
-  grid-template-rows: 20% 40% 20% 20%;
-  align-items: center;
-  justify-items: center;
-  margin-top: 10vh;
+.home-background {
+    background-image: url('/images/background.png');
+    height: 100vh;
+    background-size: cover;
 }
 
-.home-logo{
-  width: 200px;
-  height: 200px;
-  grid-row: 1 / 2;
+.home-footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 10vh;
+    color: white;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 15px;
+    line-height : 23px;
 }
 
-.home-background{
-  width: 100%;
-  height: 300px;
-  grid-row: 2 / 3;
-}
-.home-btn-login {
-  background-color: #e57067;
-  text-decoration:none; 
-  border-radius: 10vh;
-  text-align: center;
-  align-self: start;
-  padding-top: 1.7vh;
-  width: 45vh;
-  height: 7vh;
-  font-size: 1.5em;
-  color: #fff;
-  grid-row: 3 / 4;
-  box-shadow: 1px 5px 25px rgba(0, 0, 0, 0.1);
-}
-.home-btn-signup{
-  text-decoration:none; 
-  text-align: center;
-  padding-top: 1.7vh;
-  width: 45vh;
-  height: 7vh;
-  font-size: 1.5em;
-  color: #fff;
-  grid-row: 4 / 5;
+.home-link-color-white{
+    color:white;
 }
 
+.home-padding-top{
+    padding-top:15vh;
+}
 
+.home-line-height{
+    line-height : 24px;
+    width: 45vh;
+    margin: 0 auto;
+}
+
+.home-montserrat600{
+    font-weight: 600;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
+    font-style: italic;
+}
+
+.home-montserrat800{
+    font-weight: 800;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
+    font-style: italic;
+}
+
+.home-newsession-link {
+    padding: 2vh 5vh 2vh 5vh;
+    border-radius: 30.5px;
+    box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.5);
+    background-color: #151515;
+    font-size: 3vh;
+    
+  }
