--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -2,73 +2,129 @@ input {
   outline: none;
 }
 
-
-.login-div-container h1{
+.login-div-container h1 {
   font-size: 2em;
   text-align: center;
   padding-bottom: 9vh;
   color: #404040;
-  
 }
-.login-div-container{
-  display:flex;
+
+.login-div-container {
   flex-direction: column;
   justify-content: center;
-  /* border: 2px solid black; */
-  width: 100vw;
   height: 100vh;
+  width: 100%;
+  background-image: url('/images/background-2.png');
+  background-size: cover;
+  display: flex;
+  align-items: center;
 }
 
-.login-form{
-  display:flex;
+.login-form {
+  display: flex;
   flex-direction: column;
   margin: 3vh;
-  
+  margin-top: 6vh;
+  height: 90%;
+  justify-content: space-evenly;
 }
 
-.login-form-input{
+.login-form-input {
   font-size: 1.3em;
   border: none;
-  border-bottom: 1px solid black;
-  margin: 1vh 0 5vh 0;
+  border-bottom: 1.5px solid #d8d8d8;
   height: 4vh;
-  font-size: 1.1em;
+  font-size: 2vh;
   color: #404040;
 }
 
-.login-form-input:hover{
+.login-form-input2{
+  border-bottom: 2px solid #ffb035;
+}
+
+.login-form-input:hover {
   border: none;
-  border-bottom: 1px solid rgb(230, 171, 69);
-  color:rgb(230, 171, 69);
-  
+  border-bottom: 1.5px solid #d8d8d8;
+  color: rgb(230, 171, 69);
 }
 
-.login-form label{
+.login-form-input2:hover {
+  border: none;
+  border-bottom: 1.5px solid rgb(230, 171, 69);
+  color: rgb(230, 171, 69);
+}
+
+.login-form label {
   color: #404040;
-  font-size: 1.2em;
+  font-size: 1em;
 }
 
 .login-form label:first-child:hover {
   color: rgb(230, 171, 69);
 }
 
-.login-input-submit{
-border:none;
-background-color: transparent;
-position: absolute;
-padding: 1vh 2vh;
-left: 87vw;
-}
-
-.login-input-submit-container{
-  display:flex;
-  flex-direction: row;
-  justify-content: flex-end;
-}
-
-#login-submit{
+#login-submit {
   font-size: 2em;
   text-align: end;
   margin: 0;
   padding: 0;
+}
+
+.login-box {
+  width: 336px;
+  height: 439px;
+  border-radius: 39px;
+  box-shadow: 0 0 8px 0 #b7b7b7;
+  background-color: #ffffff;
+}
+
+.login-text-align-center {
+  text-align: center;
+}
+
+.login-border-none {
+  border: none;
+}
+
+.color-black {
+  color: black;
+  font-weight: 600;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.login-dont-have-account {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 15px;
+  line-height: 23px;
+  text-align: center;
+}
+
+.login-label-email {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 2vh;
+}
+
+.login-position-logo {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -270px);
+}
+
+.login-form-button-submit {
+  padding: 1.5vh 0vh;
+  border-radius: 30.5px;
+  box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.5);
+  background-color: #151515;
+  font-size: 3vh;
+  font-weight: 800;
+  font-family: 'Montserrat', sans-serif;
+  text-decoration: none;
+  color: white;
+  margin-top: 7vh;
+}
+
+.login-margin-top{
+  margin-top: 5vh;
+  font-size: 2vh;
 }
