--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Roboto:500,400');
 @import url('https://fonts.googleapis.com/css?family=Montserrat:600,800');
 
 html, body, div, span, applet, object, iframe,
