--- a/src/css/TripDetail.css
+++ b/src/css/TripDetail.css
@@ -1,7 +1,68 @@
 .tripdetail-sizeimage {
-  width: 8vh;
-  height: 8vh;
-  border-radius: 50px;
+  width: 6vh;
+  height: 6vh;
+  border-radius: 30px;
   overflow: hidden;
   object-fit: cover;
+  margin-right: 2vh;
+}
+
+.tripdetail-image {
+  width: 100%;
+  height: 30vh;
+  overflow: hidden;
+  object-fit: cover;
+}
+
+.tripdetail-margin-global{
+  margin-left: 3vh;
+  margin-right: 3vh;
+  margin-top: 2.5vh;
+}
+
+.tripdetail-title{
+  font-family: Montserrat;
+  font-size: 26px;
+  font-weight: 800;
+  color: #404040;
+}
+
+.tripdetail-displayflex{
+  display: flex;
+}
+
+
+.tripdetail-icons{
+  padding: 1vh 1vh 1vh 0;
+}
+
+.tripdetail-padding-top{
+  padding-top: 1vh;
+  margin-right: 3vh;
+  font-family: Roboto;
+  font-weight: 500;
+  color: #404040;
+}
+
+.tripdetail-barra{
+  border-bottom: 1.2px solid grey;
+}
+
+.tripedetail-description{
+  font-family: Montserrat;
+  font-size: 19px;
+  font-weight: 800;
+  color: #404040;
+  margin-top: 2.5vh;
+}
+
+.tripdetail-padding-users{
+  padding-top: 2.5vh;
+  padding-bottom: 2.5vh;
+}
+
+.tripdetail-text-description{
+  font-family: Roboto;
+  font-weight: 400;
+  padding-top: 1vh;
 }
