--- a/src/css/Trips.css
+++ b/src/css/Trips.css
@@ -47,12 +47,14 @@
 .tripcard-title {
     font-size: 2.9vh;
     margin-top: 0.9vh;
+    overflow: hidden;
 }
 
 .tripcard-style-p {
     font-size: 2.1vh;
     margin-top: 1vh;
     color: #404040;
+    overflow: hidden;
 }
 
 .tripcard-style-toolbar {
