--- a/src/css/TripsNew.css
+++ b/src/css/TripsNew.css
@@ -63,10 +63,11 @@
     padding:10px;
     width: 15vh;
     border: none;
-    box-shadow: 0 0 7px #ffb035;
+    border: 1px solid #ffb035;
     background-color: #fffcf77c;
     color: #404040;
     font-family: 'Montserrat', sans-serif;
+    margin-top: 7vh;
 }
 
 .formcreatetrip-footer{
