--- a/src/css/Profile.css
+++ b/src/css/Profile.css
@@ -6,6 +6,8 @@
     width: 15vh;
     overflow: hidden;
     object-fit: cover;
+    margin-bottom: 3vh;
+    margin-top: 1vh;
 }
 
 .profile-margin-global{
@@ -59,4 +61,21 @@
   padding-top: 2vh;
   padding-bottom: 2vh;
   margin-top: 10vh;
+}
+
+.image-form{
+    margin-bottom: 2vh;
+}
+
+.image-background-formcreate{
+    background-image: url("/images/fotos.png");
+    background-repeat: no-repeat;
+    height: 100vh;
+    background-size: cover;
+}
+.image-background-formcreate2{
+    background-image: url("/images/fondo-2.jpg");
+    background-repeat: no-repeat;
+    height: 100vh;
+    background-size: cover;
 }
