--- a/src/css/Trips.css
+++ b/src/css/Trips.css
@@ -19,6 +19,7 @@
 
 .trips-title {
     font-size: 3.5vh;
+    margin-top: 2vh;
 }
 
 .font-family-montserrat {
@@ -80,6 +81,10 @@
     z-index: 1;
     margin-top: 3vh;
     margin-left: 1vh;
+}
+
+.formcreatetrip-margin-top-2{
+    margin-top:10vh;
 }
 
 .mytrips-border{
