--- a/src/css/Trips.css
+++ b/src/css/Trips.css
@@ -42,6 +42,15 @@
     object-fit: cover;
 }
 
+.tripcard-image2 {
+    width: 100%;
+    height: 25vh;
+    border-radius: 1vh;
+    overflow: hidden;
+    object-fit: cover;
+    margin-top: 12vh;
+}
+
 .tripscard-margin-top {
     margin-top: 3vh;
     margin-bottom: 4vh;
