--- a/src/css/Profile.css
+++ b/src/css/Profile.css
@@ -81,6 +81,13 @@
     background-size: cover;
 }
 
+.image-background-formcreate4{
+    background-image: url("/images/favoritos-fondo.jpg");
+    background-repeat: no-repeat;
+    height: 100vh;
+    background-size: cover;
+}
+
 .image-background-formcreate3{
     background-image: url("/images/perfil-naranja.png");
     background-repeat: no-repeat;
