--- a/src/css/TripDetail.css
+++ b/src/css/TripDetail.css
@@ -34,6 +34,29 @@
   flex-wrap: wrap;
 }
 
+.tripdetail-comments-box{
+  /* border: 1px solid grey; */
+  height: 50vh;
+  word-wrap: break-word;
+  overflow: auto;
+  box-shadow: 0 0 15px rgb(184, 184, 184);
+  /* background-color: rgb(243, 243, 243); */
+  border-radius: 5px;
+  opacity: 0.75;
+  margin-top: 3vh;
+  padding-top: 2vh;
+  padding-left: 2vh;
+  padding-right: 2vh;
+}
+
+.comment-card-text{
+  margin-bottom: 2vh;
+  border: none;
+  width: 40%;
+  padding: 1vh;
+  background-color: #fde0b0;
+  border-radius: 0.5vh;
+}
 
 .tripdetail-icons{
   padding: 1vh 1vh 1vh 0;
@@ -73,6 +96,23 @@
   padding-top: 1vh;
   max-width:90%;
   word-wrap: break-word;
+  margin-bottom: 3vh;
+}
+
+.tripscard-margin-top23{
+  margin-top: 2vh;
+}
+
+.formcreatetrip-button23{
+  border-radius: 5vh;
+    background: none;
+    padding:10px;
+    width: 15vh;
+    border: none;
+    border: 1px solid #ffb035;
+    background-color: #fffcf77c;
+    color: #404040;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .tripdetail-button-never-effect{
