--- a/src/css/Trips.css
+++ b/src/css/Trips.css
@@ -63,10 +63,14 @@
 }
 
 .tripcard-style-p {
-    font-size: 2.1vh;
+    font-size: 1.7vh;
     margin-top: 1vh;
     color: #404040;
     overflow: hidden;
+}
+
+.span-bol{
+    font-weight: bold;
 }
 
 .tripcard-style-fav {
